# interpao

./: .env.example  .gitignore  README.md  docker-compose.yml
.agent/workflows/: run-project.md
back-end/: .env.example  Dockerfile  README.md  pyproject.toml
back-end/app/: main.py
back-end/app/api/api_v1/: api.py
back-end/app/core/: celery_app.py  config.py  security.py
back-end/app/db/: session.py
back-end/app/models/: company.py  session.py  user.py
back-end/app/tasks/: scheduler.py  worker.py
back-end/config/security/: jwt_bearer_authentication.py
back-end/migrations/: 20260507_auth_system.sql
back-end/src/auth/: dependencies.py  routes.py  schemas.py
back-end/src/auth/repositories/: auth_repository.py
back-end/src/auth/services/: policy.py  service.py
back-end/src/auth/use_cases/: authenticate.py
back-end/tests/: test_main.py
back-end/utils/: __init__.py  jwt_handler.py  password_handler.py
docker/: docker-compose-supabase.yml
front-end/: Dockerfile  index.html  package-lock.json  package.json
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/api/: auth.ts  client.ts
front-end/src/components/: Layout.tsx
front-end/src/components/login/: LoginCard.tsx  LoginFooter.tsx  LoginForm.tsx
front-end/src/hooks/: useCurrentUser.ts  useMinimumLoadingTime.ts  useStats.ts
front-end/src/pages/: CourseContentPage.tsx  DashboardPage.tsx  HomePage.tsx  KnowledgeTrailPage.tsx  LoginPage.tsx
front-end/src/providers/: AppProviders.tsx
front-end/src/theme/: index.ts
front-end/src/types/: index.ts
(+4 files in other folders)
